[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/StartText.png" type="Texture" id=1]
[ext_resource path="res://UI/GameTitle.png" type="Texture" id=2]
[ext_resource path="res://Font/Minecraft.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MainTitleScreen.gd" type="Script" id=4]
[ext_resource path="res://UI/ButtonStyles/press_styleboxtexture.tres" type="StyleBox" id=5]
[ext_resource path="res://UI/ButtonStyles/hover_styleboxtexture.tres" type="StyleBox" id=6]
[ext_resource path="res://UI/ButtonStyles/normal_styleboxtexture.tres" type="StyleBox" id=7]
[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="MainTitleScreen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="StartTitle" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -82.0
margin_right = 40.0
margin_bottom = -34.0
texture = ExtResource( 1 )
expand = true

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = 54.0
margin_right = 24.0
margin_bottom = 70.0
theme = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "Quit"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = 30.0
margin_right = 24.0
margin_bottom = 46.0
theme = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 7 )
text = "Start"

[node name="ButtonAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
